--- a/07-test-vite/index.module.less
+++ b/07-test-vite/index.module.less
@@ -1,5 +1,8 @@
+// @import url("./varible.less");
+
 .content {
   .main {
-    background-color: green;
+    background-color: @mainColor;
+		filter:blur(100px)
   }
 }
