--- a/07-test-vite/componentA.module.css
+++ b/07-test-vite/componentA.module.css
@@ -3,3 +3,8 @@
   height: 200px;
   background-color: beige;
 }
+.footer-content {
+	width: 200px;
+	height: 200px;
+	background-color: var(--globalColor);
+}
